--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,6 +29,10 @@
     <![endif]-->
     <jhi-app>
       <div class="app-loading">
+        <div class="loader">
+          <img src="content/images/beatStream.png" alt="Loading" />
+        </div>
+
         <div class="lds-pacman">
           <div>
             <div></div>
